# SkillBox-Chat-Bot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f191a564e3d2_create_users_habits_tables.py  f9001d20abcf_create_users_habits_tables.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  habit_model.py  user_model.py
backend/app/routers/: auth_router.py  habits_router.py  users_router.py
backend/app/schemas/: habit_schema.py  user_schema.py
backend/app/services/: habit_service.py  user_service.py
bot/: Dockerfile  config.py  main.py  pyproject.toml  scheduler.py
bot/handlers/: auth_handler.py  habits_handler.py  start_handler.py
bot/keyboards/: inline_keyboards.py
bot/services/: api_client.py
